test/fixtures/syntaxerrors/var.lys.ast.desugar
|-Document(0,35)
  |-(AstCons)
    |-(AstCons)
      |-(AstCons)
        |-(AstCons)
          |-(AstCons)
            |-(AstCons)
              |-(AstCons)
                |-(AstCons)
                  |-(AstCons)
                    |-(AstCons)
                      |-VarDirective(0,8)
                        |-(AstCons)
                          |-NoModifier(0,0)
                            <Rule0>
                          |-VarDeclaration(0,8)
                            |-(AstCons)
                              |-NameIdentifier(4,5)
                                |-Identifier=x
                              |-<SyntaxError>=A value was expected.
                      |-VarDirective(8,17)
                        |-(AstCons)
                          |-NoModifier(8,8)
                            <Rule0>
                          |-VarDeclaration(8,17)
                            |-(AstCons)
                              |-NameIdentifier(12,13)
                                |-Identifier=y
                              |-NumberLiteral=1
                    |-<UNEXPECTED TOKEN>=var
                  |-<UNEXPECTED TOKEN>= 
                |-<UNEXPECTED TOKEN>=var
              |-<UNEXPECTED TOKEN>=


            |-<UNEXPECTED TOKEN>=var
          |-<UNEXPECTED TOKEN>= 
        |-<UNEXPECTED TOKEN>==
      |-<UNEXPECTED TOKEN>= 
    |-<UNEXPECTED TOKEN>=1